# gitlab-ci-lint

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  TEST_DESIGN.md  moon.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml
.moon/: toolchain.yml  workspace.yml
.moon/hooks/: commit-msg.sh  pre-commit.sh
src/gitlab_ci_lint/: cli.py  linter.py  semantic.py
src/gitlab_ci_lint/schema/: __init__.py
tests/: conftest.py  test_linter.py
tests/e2e/: __init__.py  test_cli.py
tests/fixtures/: invalid.gitlab-ci.yml  valid.gitlab-ci.yml
tests/fixtures/edge_cases/: only_comments.yml  unicode_job_names.yml
tests/fixtures/invalid/: extends_circular_chain.yml  extends_circular_self.yml  extends_missing.yml  needs_nonexistent.yml  schema_unknown_key.yml  schema_wrong_type.yml  stage_undefined.yml  yaml_bad_indent.yml  yaml_unclosed_bracket.yml
tests/fixtures/valid/: full_featured.yml  minimal.yml  only_templates.yml  with_extends_chain.yml  with_needs_dag.yml  with_stages.yml
tests/integration/: __init__.py  test_linter.py  test_schema.py
tests/unit/: __init__.py  test_semantic.py
