[project]
name = "gitlab-ci-lint"
version = "0.1.0"
description = "A CLI tool to lint GitLab CI files offline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
gitlab-ci-lint = "gitlab_ci_lint.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitlab_ci_lint"]
