[project]
name = "gitlab-ci-lint"
version = "0.1.0"
description = "A CLI tool to lint GitLab CI files offline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Max Noller" }
]
keywords = ["gitlab", "ci", "lint", "validation", "yaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
gitlab-ci-lint = "gitlab_ci_lint.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "basedpyright>=1.20.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitlab_ci_lint"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["gitlab_ci_lint"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
